apps/base/media/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  type: LoadBalancer
  selector:
    app: emby
  ports:
  - name: http
    port: 80
    targetPort: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 80
    targetPort: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
  - name: http
    port: 80
    targetPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-4k
  namespace: media
spec:
  selector:
    app: sonarr-4k
  ports:
  - name: http
    port: 80
    targetPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 80
    targetPort: 7878
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-4k
  namespace: media
spec:
  selector:
    app: radarr-4k
  ports:
  - name: http
    port: 80
    targetPort: 7878
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 80
    targetPort: 9696
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
spec:
  selector:
    app: jellyseerr
  ports:
  - name: http
    port: 80
    targetPort: 5055
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  selector:
    app: bazarr
  ports:
  - name: http
    port: 80
    targetPort: 6767
